<resources>
    <string name="app_name">中文之音</string>
    <string name="action_settings">Settings</string>
    <string name="upgrade_tips">"更新提示"</string>
    <string name="negative_text">"取消"</string>
    <string name="positive_text">"确定"</string>
    <string name="new_versions_message">"发现了最新版本,是否下载?"</string>
    <string name="has_download_message">"更新包下载完毕,是否安装?"</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_nomore">到底儿了</string>
    <string name="xlistview_footer_hint_errors">加载失败</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="batch_remove">批量删除</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="ActivityProfile_title">Profile</string>
    <string name="ActivityProfile_about">About me</string>
    <string name="ActivityProfile_education">Education</string>
    <string name="ActivityProfile_languages">Spoken Languages</string>
    <string name="ActivityProfile_hobbies">Hobbies</string>
    <string name="ActivityProfile_album">Album</string>
</resources>