<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00a478">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/home_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ActivityProfile_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher_student" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_avatar"
            android:text="nickname" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_avatar"
            android:layout_toRightOf="@+id/iv_avatar"
            android:drawableLeft="@drawable/marker"
            android:enabled="false"
            android:gravity="center"
            android:text="username" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_choose_callb"
            android:padding="15dp"
            android:src="@drawable/icon_choose_call" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#f0f0f0"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#fff"
                    android:padding="10dp"
                    android:text="@string/ActivityProfile_about"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:maxLines="5"
                    android:padding="10dp"
                    android:text="关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于关于" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#ffffff"
                    android:padding="10dp"
                    android:text="@string/ActivityProfile_education"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="10dp"
                    android:paddingBottom="10dp"
                    android:text="北京大学,清华大学" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#ffffff"
                    android:padding="10dp"
                    android:text="@string/ActivityProfile_languages"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="10dp"
                    android:text="中,日,韩,英" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#ffffff"
                    android:padding="10dp"
                    android:text="@string/ActivityProfile_hobbies"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="10dp"
                    android:text="游泳,健身,吃饭,睡觉" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#ffffff"
                    android:padding="10dp"
                    android:text="@string/ActivityProfile_album"
                    android:textColor="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/ll_album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="horizontal"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>